testsuite/tests/rename/should_fail/rnfail050.stderr

rnfail050.hs:10:37: error: Variable not in scope: f :: [a] -> [a]
